--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "locals": {
-    "url": "http://localhost:8080",
+    "url": "http://words.jkimbo.com",
     "name": "jkimbo",
     "owner": "Jonathan Kim",
     "description": "..."
